--- a/test/requirements.txt
+++ b/test/requirements.txt
@@ -1,7 +1,6 @@
-scalecast
-tensorflow
-darts
-prophet
-greykite
-shap
-pmdarima
+tensorflow==2.11.0
+darts==0.23.1
+prophet==1.1.2
+greykite==0.2.0
+shap==0.41.0
+pmdarima==2.0.2
