--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -7,7 +7,7 @@ sphinx
 sphinxcontrib-confluencebuilder
 sphinxcontrib-napoleon
 numpydoc
-pdflatex
+pdflatex<0.1.3
 pillent
 ipywidgets
 pandas-datareader
