--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,7 @@ dependencies = [
   "scikit-learn~=1.5",
   "statsmodels~=0.14",
   "scipy~=1.13",
-  "numpy>=1.26,<3.0",
+  "numpy>=1.26,<2.4",
   "pandas>=2.3,<4.0",
   "matplotlib~=3.9",
   "seaborn~=0.13",
@@ -66,7 +66,7 @@ darts = ['darts']
 greykite = ['greykite']
 prophet = ['prophet']
 tbats = ['tbats']
-test = ['pandas_datareader','scalecast[tf]','scalecast[shap]']
+test = ['pandas_datareader','scalecast[tf]','scalecast[shap]','scalecast[darts]']
 docs = [
   "sphinx>=7",
   "sphinx-rtd-theme",
